src/objects/Recusal__c.object
<CustomObject>
    <fields>
        <fullName>ADCVD_Case_Number_Text__c</fullName>
        <label>ADCVD Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case_Type_Text__c</fullName>
        <label>ADCVD Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADCVD_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Case</label>
        <referenceTo>ADCVD_Case__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADCVD_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ADCVD Order</label>
        <referenceTo>ADCVD_Order__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actor_End_Date__c</fullName>
        <label>Acting User End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actor_Start_Date__c</fullName>
        <label>Acting User Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recusals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBP_Case_Number_Text__c</fullName>
        <label>CBP Case Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commodity_Text__c</fullName>
        <label>Commodity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Text__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <defaultValue>DATEVALUE(&apos;2099-01-02&apos;)</defaultValue>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Investigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investigation</label>
        <referenceTo>Investigation__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Litigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Litigation</label>
        <referenceTo>Litigation__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Petition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Petition</label>
        <referenceTo>Petition__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Recusal_Aligned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Recusal Aligned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Recusal__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Primary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Recusal__c</referenceTo>
        <relationshipLabel>Aligned Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Short_Name_Text__c</fullName>
        <label>Product Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Text__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Recusal__c</fullName>
        <label>Reason for Recusal</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Organization</label>
        <referenceTo>Related_Organization__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segment</label>
        <referenceTo>Segment__c</referenceTo>
        <relationshipLabel>Recusals</relationshipLabel>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recusals</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recusal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>User__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Recusals_ClosedLocked_Queue_Recusal</fullName>
        <filterScope>Queue</filterScope>
        <label>Recusals-ClosedLocked Queue</label>
        <queue>Recusals_ClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recusals_MigratedClosedLocked_Queue_Recusal</fullName>
        <filterScope>Queue</filterScope>
        <label>Recusals-MigratedClosedLocked Queue</label>
        <queue>Recusals_MigratedClosedLocked_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recusals_Open_Queue_Recusal</fullName>
        <filterScope>Queue</filterScope>
        <label>Recusals-Open Queue</label>
        <queue>Recusals_Open_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Recusal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recusals</pluralLabel>
    <recordTypes>
        <fullName>Primary</fullName>
        <active>true</active>
        <description>Primary recusals with details about the recusal</description>
        <label>Primary</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related</fullName>
        <active>false</active>
        <description>Recusals that link a primary recusal and a record</description>
        <label>Related</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Locked_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $Permission.Edit_ADCVD_Locked_Records == false, 
NOT(ISNEW()), 
PRIORVALUE(Locked__c) == true 
)</errorConditionFormula>
        <errorMessage>This record is locked.  Please contact your administrator about unlocking this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_date_greater_or_equal_to_start_date</fullName>
        <active>true</active>
        <description>End Date must be greater than or equal to Start Date</description>
        <errorConditionFormula>End_Date__c  &lt;  Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date on a Recusal cannot be less than the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Admin_can_reparent_Recusal</fullName>
        <active>true</active>
        <description>Only a System Administrator can reparent a Recusal record.</description>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, 
Locked__c == false, 
NOT( ISNEW() ), OR(
ISCHANGED(ADCVD_Order__c ), 
ISCHANGED(Investigation__c), 
ISCHANGED(Litigation__c), 
ISCHANGED(Petition__c),
ISCHANGED(Related_Organization__c),
ISCHANGED(Segment__c)),
$Profile.Name
 &lt;&gt; 
&quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorMessage>You are not authorized to edit this field. Only a System Administrator can edit the parent of a Recusal record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusal_must_have_a_primary</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(RecordType.DeveloperName = &apos;Related&apos;,
     Primary_Recusal_Aligned_To__c  = null
))</errorConditionFormula>
        <errorMessage>Related recusals be aligned to a primary recusal</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusal_one_parent_Investigation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(
	RecordType.DeveloperName = &apos;Related&apos;,
	OR(
		AND(
		ADCVD_Order__c = null,
		 Investigation__c != null,
		 Litigation__c != null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c != null,
		 Litigation__c = null,
		 Petition__c != null,
		 Related_Organization__c = null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c != null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c != null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c != null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c != null
		)
	)
))</errorConditionFormula>
        <errorMessage>Related recusals must have one parent record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusal_one_parent_Litigation</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(
	RecordType.DeveloperName = &apos;Related&apos;,
	OR(
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c != null,
		 Petition__c != null,
		 Related_Organization__c = null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c != null,
		 Petition__c = null,
		 Related_Organization__c != null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c != null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c != null
		)
	)
))</errorConditionFormula>
        <errorMessage>Related recusals must have one parent record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusal_one_parent_Petition</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(
	RecordType.DeveloperName = &apos;Related&apos;,
	OR(
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c = null,
		 Petition__c != null,
		 Related_Organization__c != null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c != null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c != null
		)
	)
))</errorConditionFormula>
        <errorMessage>Related Recusals must have one parent record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusal_one_parent_rel_org</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(
	RecordType.DeveloperName = &apos;Related&apos;,
	OR(
		AND(
		ADCVD_Order__c = null,
		 Investigation__c = null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c != null,
		 Segment__c != null
		)
	)
))</errorConditionFormula>
        <errorMessage>Related recusals must have one parent record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusals_must_have_a_parent</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(RecordType.DeveloperName = &apos;Related&apos;,
ADCVD_Order__c = null,
 Investigation__c = null,
 Litigation__c = null,
 Petition__c = null,
 Related_Organization__c = null,
 Segment__c = null
))</errorConditionFormula>
        <errorMessage>Related Recusals must have one parent record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Related_Recusals_one_parent_ADCVD_Order</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Setup.Master_Automation__c.ValidationRulesEnabled__c == true, Locked__c == false,AND(
	RecordType.DeveloperName = &apos;Related&apos;,
	OR(
		AND(
		ADCVD_Order__c != null,
		 Investigation__c != null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c != null,
		 Investigation__c = null,
		 Litigation__c = null,
		 Petition__c != null,
		 Related_Organization__c = null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c != null,
		 Investigation__c = null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c != null,
		 Segment__c = null
		),
		AND(
		ADCVD_Order__c != null,
		 Investigation__c = null,
		 Litigation__c = null,
		 Petition__c = null,
		 Related_Organization__c = null,
		 Segment__c != null
		)
	)
))</errorConditionFormula>
        <errorMessage>Related Recusals must have one parent record</errorMessage>
    </validationRules>
</CustomObject>